Fixed misaligned logo

--- a/app/assets/stylesheets/viewports/_medium.scss
+++ b/app/assets/stylesheets/viewports/_medium.scss
@@ -105,7 +105,7 @@
 			background-position: center;
 			width: 48px;
 			height: 48px;
-			margin-top: 2px;
+			margin-top: -2px;
 			background-size: contain;
 			margin: .3em auto 0;
 		}
